--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <br>
         <br>
         <div class="image">
-            <img src="assets/man.jpeg" alt="avatar">
+            <img src="assets/ma.png" alt="avatar">
         </div>
         <br>
 <div class="fadeInUp-animation">
